# diy-clock

./: .gitignore  7digit.ino  README.md  clock.py  config.json.sample  manage.py  pyproject.toml  uwsgi.ini
arduino/: 7digit.ino  sensor.ino
xiaclock/: asgi.py  config.py  ntp.py  segment.py  settings.py  urls.py  wsgi.py
xiaclock/api/: urls.py
xiaclock/api/clocks/: clock.py  urls.py
xiaclock/api/sensors/: sensors.py  urls.py
xiaclock/api/service/: service.py  urls.py
