[tool.poetry]
name = "xia-clock"
version = "0.1.0"
description = ""
authors = ["leXia Lim <limlexia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
ntplib = "^0.4.0"
pyserial = "^3.5"
apscheduler = "^3.10.4"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
